[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/fontes/pixelart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/ico_btn/gun_ico.png" type="Texture" id=2]
[ext_resource path="res://sprites/ico_btn/magnum_ico.png" type="Texture" id=3]
[ext_resource path="res://sprites/ico_btn/shot_gun_ico.png" type="Texture" id=4]
[ext_resource path="res://sprites/ico_btn/SMG_ico.png" type="Texture" id=5]
[ext_resource path="res://GUI/scripts/menu_select.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="menu_select" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.105882, 0.321569, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -23.0
margin_bottom = 23.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 22.0
alignment = 1

[node name="gun" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 19.0
margin_right = 67.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "GUN"
icon = ExtResource( 2 )
flat = true
align = 2

[node name="shot_gun" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 145.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "SHOT GUN"
icon = ExtResource( 4 )
flat = true

[node name="smg" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 149.0
margin_right = 197.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
text = "SMG"
icon = ExtResource( 5 )
flat = true

[node name="magnum" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 201.0
margin_right = 284.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "MAGNUM 500"
icon = ExtResource( 3 )
flat = true

[node name="play" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 304.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 5 )
text = "PLAY"
flat = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/gun" to="." method="_on_gun_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/gun" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/shot_gun" to="." method="_on_shot_gun_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/smg" to="." method="_on_smg_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/magnum" to="." method="_on_magnum_pressed"]
[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
